libs/bng/test/negative/N0212_rxn_no_product.bngl
# FAIL
# OUTPUT: error: syntax error, unexpected newline

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a) ->   kp
end reaction rules
